@@ -3,28 +3,29 @@ package tn.esprit.eventservice.controller;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
+import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import tn.esprit.eventservice.dto.*;
-import tn.esprit.eventservice.entity.Event;
-import tn.esprit.eventservice.entity.EventRegistration;
-import tn.esprit.eventservice.entity.EventType;
+import tn.esprit.eventservice.entity.*;
 import tn.esprit.eventservice.service.EventService;
 
-@SpringBootTest
-@AutoConfigureMockMvc
+@WebMvcTest(controllers = EventController.class)
+@AutoConfigureMockMvc(addFilters = false)
 class EventControllerIntegrationTest {
 
     @Autowired
@@ -33,27 +34,37 @@ class EventControllerIntegrationTest {
     @MockBean
     private EventService eventService;
 
-    @Autowired
-    private ObjectMapper objectMapper;
+    private final ObjectMapper objectMapper = new ObjectMapper().registerModule(new JavaTimeModule());
+
+    private Event buildEvent(Long id, String title) {
+        return Event.builder().id(id).title(title).type(EventType.WORKSHOP)
+                .startDate(LocalDateTime.now().plusDays(1))
+                .endDate(LocalDateTime.now().plusDays(2))
+                .clubId(1L).maxParticipants(50).build();
+    }
 
     @Test
-    void testGetAllEvents() throws Exception {
-        Event event = Event.builder().id(1L).title("Integration Test").build();
-        when(eventService.findAll()).thenReturn(Arrays.asList(event));
+    void testGetAll() throws Exception {
+        when(eventService.findAll()).thenReturn(List.of(buildEvent(1L, "E1")));
         mockMvc.perform(get("/api/events")).andExpect(status().isOk());
     }
 
     @Test
-    void testGetEventById() throws Exception {
-        Event event = Event.builder().id(1L).title("Specific Event").build();
-        when(eventService.findById(1L)).thenReturn(Optional.of(event));
+    void testGetById_Found() throws Exception {
+        when(eventService.findById(1L)).thenReturn(Optional.of(buildEvent(1L, "E1")));
         mockMvc.perform(get("/api/events/1")).andExpect(status().isOk());
     }
 
     @Test
-    void testCreateEvent() throws Exception {
+    void testGetById_NotFound() throws Exception {
+        when(eventService.findById(99L)).thenReturn(Optional.empty());
+        mockMvc.perform(get("/api/events/99")).andExpect(status().isNotFound());
+    }
+
+    @Test
+    void testCreate() throws Exception {
         EventDTO dto = EventDTO.builder().title("New").type(EventType.WORKSHOP).build();
-        Event saved = Event.builder().id(10L).title("New").build();
+        Event saved = buildEvent(10L, "New");
         when(eventService.create(any(Event.class), any())).thenReturn(saved);
         mockMvc.perform(post("/api/events")
                 .contentType(MediaType.APPLICATION_JSON)
@@ -62,9 +73,9 @@ class EventControllerIntegrationTest {
     }
 
     @Test
-    void testUpdateEvent() throws Exception {
+    void testUpdate() throws Exception {
         EventDTO dto = EventDTO.builder().title("Updated").build();
-        Event updated = Event.builder().id(1L).title("Updated").build();
+        Event updated = buildEvent(1L, "Updated");
         when(eventService.update(any(Long.class), any(Event.class), any())).thenReturn(updated);
         mockMvc.perform(put("/api/events/1")
                 .contentType(MediaType.APPLICATION_JSON)
@@ -73,10 +84,17 @@ class EventControllerIntegrationTest {
     }
 
     @Test
+    void testDelete() throws Exception {
+        mockMvc.perform(delete("/api/events/1")).andExpect(status().isNoContent());
+    }
+
+    @Test
     void testRegisterForEvent() throws Exception {
-        EventRegistrationDto dto = EventRegistrationDto.builder().userName("Eya").build();
-        EventRegistration reg = EventRegistration.builder().id(1L).userName("Eya").build();
+        EventRegistrationDto dto = EventRegistrationDto.builder().userName("Eya").userEmail("e@t.com").build();
+        EventRegistration reg = EventRegistration.builder().id(1L).eventId(1L)
+                .userName("Eya").userEmail("e@t.com").status(RegistrationStatus.CONFIRMED).build();
         when(eventService.registerForEvent(any(), any())).thenReturn(reg);
+        when(eventService.findById(1L)).thenReturn(Optional.of(buildEvent(1L, "E")));
         mockMvc.perform(post("/api/events/1/register")
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(dto)))
@@ -84,8 +102,25 @@ class EventControllerIntegrationTest {
     }
 
     @Test
-    void testGetStats() throws Exception {
-        when(eventService.getEventStats(1L)).thenReturn(EventStatsDTO.builder().build());
+    void testCheckIfRegistered() throws Exception {
+        when(eventService.isUserRegistered(1L, 100L)).thenReturn(true);
+        mockMvc.perform(get("/api/events/1/is-registered").param("userId", "100"))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    void testGetUserRegistrations() throws Exception {
+        EventRegistration reg = EventRegistration.builder().id(1L).eventId(1L)
+                .userName("U").userEmail("u@t.com").status(RegistrationStatus.CONFIRMED).build();
+        when(eventService.getUserRegistrations(100L)).thenReturn(List.of(reg));
+        when(eventService.findById(1L)).thenReturn(Optional.of(buildEvent(1L, "E")));
+        mockMvc.perform(get("/api/events/my-registrations").param("userId", "100"))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    void testGetEventStats() throws Exception {
+        when(eventService.getEventStats(1L)).thenReturn(EventStatsDTO.builder().totalInscribed(5).build());
         mockMvc.perform(get("/api/events/1/stats")).andExpect(status().isOk());
     }
 
@@ -97,18 +132,51 @@ class EventControllerIntegrationTest {
 
     @Test
     void testGetBudgetStats() throws Exception {
-        when(eventService.getBudgetStats()).thenReturn(BudgetStatsDTO.builder().build());
+        when(eventService.getBudgetStats()).thenReturn(BudgetStatsDTO.builder().totalEstimatedCost(500.0).build());
         mockMvc.perform(get("/api/events/budget")).andExpect(status().isOk());
     }
 
     @Test
-    void testDeleteEvent() throws Exception {
-        mockMvc.perform(delete("/api/events/1")).andExpect(status().isNoContent());
+    void testGetRegistrationById_Found() throws Exception {
+        EventRegistration reg = EventRegistration.builder().id(1L).eventId(1L)
+                .userName("U").userEmail("u@t.com").status(RegistrationStatus.CONFIRMED).build();
+        when(eventService.getRegistrationById(1L)).thenReturn(Optional.of(reg));
+        when(eventService.findById(1L)).thenReturn(Optional.of(buildEvent(1L, "E")));
+        mockMvc.perform(get("/api/events/registrations/1")).andExpect(status().isOk());
     }
 
     @Test
-    void testGetEventById_NotFound() throws Exception {
-        when(eventService.findById(99L)).thenReturn(Optional.empty());
-        mockMvc.perform(get("/api/events/99")).andExpect(status().isNotFound());
+    void testGetRegistrationById_NotFound() throws Exception {
+        when(eventService.getRegistrationById(99L)).thenReturn(Optional.empty());
+        mockMvc.perform(get("/api/events/registrations/99")).andExpect(status().isNotFound());
+    }
+
+    @Test
+    void testCancelRegistration() throws Exception {
+        mockMvc.perform(delete("/api/events/registrations/1")).andExpect(status().isNoContent());
+    }
+
+    @Test
+    void testGetWaitlist() throws Exception {
+        EventRegistration reg = EventRegistration.builder().id(1L).eventId(1L)
+                .userName("U").userEmail("u@t.com").status(RegistrationStatus.WAITLISTED).build();
+        when(eventService.getRegistrationsByEventAndStatus(1L, RegistrationStatus.WAITLISTED))
+                .thenReturn(List.of(reg));
+        when(eventService.findById(1L)).thenReturn(Optional.of(buildEvent(1L, "E")));
+        mockMvc.perform(get("/api/events/1/waitlist")).andExpect(status().isOk());
+    }
+
+    @Test
+    void testPromoteFromWaitlist() throws Exception {
+        mockMvc.perform(post("/api/events/registrations/1/promote")).andExpect(status().isOk());
+    }
+
+    @Test
+    void testMapRegToDTO_EventNotFound() throws Exception {
+        EventRegistration reg = EventRegistration.builder().id(1L).eventId(999L)
+                .userName("U").userEmail("u@t.com").status(RegistrationStatus.CONFIRMED).build();
+        when(eventService.getRegistrationById(1L)).thenReturn(Optional.of(reg));
+        when(eventService.findById(999L)).thenReturn(Optional.empty());
+        mockMvc.perform(get("/api/events/registrations/1")).andExpect(status().isOk());
     }
 }
